# Curiosity_rebirth

./: LICENSE  README.md
esp_camera/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
esp_camera/components/camera/: camera_server.cpp  camera_server.h  command_get.h
esp_camera/main/: CMakeLists.txt  command_get.cpp  command_get.h  esp_cam_main.cpp  test_camera.cpp
mars-rover-code/: .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
mars-rover-code/.cache/clangd/index/: esp_idf_lib_helpers.h.D38A0D23D55A7C5B.idx  ets_sys.h.31641D9EA9B8570C.idx  i2cdev.c.D63791496BB3049D.idx  i2cdev.h.8763B08ABF87DDF3.idx  iot_servo.c.1012370673C75E0C.idx  iot_servo.h.5B43EBFD5A4AA95B.idx  main.cpp.4DE9E707B11DDB5D.idx  motors.cpp.2D0A5B93DCCF1A45.idx  motors.h.DAC54F31C7B64A2F.idx  motors_cfg.h.5DCD3E1002515108.idx  pca9685.c.B73376131873E3ED.idx  pca9685.h.D92820BD29CA20E0.idx  spp_task.c.0F2D8B2FBE112B0E.idx  spp_task.h.808421313D54FB88.idx
mars-rover-code/components/bluetooth/: CMakeLists.txt  bluetooth.cpp  my_platform.c  my_platform.cpp
mars-rover-code/components/camera/: CMakeLists.txt  camera_server.cpp  camera_server.h  comm_espnow.cpp  comm_espnow.h
mars-rover-code/components/espnow_common/: comm_espnow.cpp  comm_espnow.h
mars-rover-code/components/motors/: CMakeLists.txt  drive_system.cpp  drive_system.h  drivesystem_cfg.h  motors.cpp  motors.h  motors_cfg.h  stepper.cpp  stepper.h  wheel_motor.cpp  wheel_motor.h  wheels.cpp  wheels.h
mars-rover-code/components/pca9685/: CMakeLists.txt  pca_buffer.cpp  pca_buffer.h
mars-rover-code/components/pca_buffer/: CMakeLists.txt  pca_buffer.cpp  pca_buffer.h
mars-rover-code/components/stepper/: CMakeLists.txt  stepper_motor.cpp  stepper_motor.h  stepper_motor_encoder.c  stepper_motor_example_main.c
mars-rover-code/main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  mars-rover-code.c  mars-rover-code.cpp  motors.cpp  test_camera.cpp
mars-rover-code/main/motors/: motors.cpp  motors.h  motorsInterface.h
mars-rover-code/main/servoController/: servoController.cpp  servoController.h  servoInterface.h
mars-rover-code/old_components/bluetooth/: CMakeLists.txt
mars-rover-code/old_components/motors/: CMakeLists.txt  motors.h
